--- a/Hawk.ETL.Controls/FeelLuckPanel.xaml
+++ b/Hawk.ETL.Controls/FeelLuckPanel.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Hawk.ETL.Controls.FeelLuckPanel"
+﻿<UserControl x:Name="userControl" x:Class="Hawk.ETL.Controls.FeelLuckPanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,6 +10,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="659" d:DesignWidth="916" Background="{DynamicResource NormalBrush}">
     <UserControl.Resources>
+    	<BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <Style x:Key="DataRowStyle1" TargetType="{x:Type xcdg:DataRow}">
             <Setter Property="Background" Value="{DynamicResource NormalBrush}"/>
             <Setter Property="Foreground" Value="{DynamicResource TextBrush}"/>
@@ -25,16 +26,13 @@
         </DataTemplate>
     </UserControl.Resources>
     <Grid>
-    	<Grid.ColumnDefinitions>
-    		<ColumnDefinition Width="0.576*"/>
-    		<ColumnDefinition Width="0.424*"/>
-    	</Grid.ColumnDefinitions>
+    	 
     	<Grid.RowDefinitions>
-    		<RowDefinition Height="0.592*"/>
+    		<RowDefinition Height="0.392*"/>
     		<RowDefinition Height="0.038*"/>
     		<RowDefinition Height="0.37*"/>
     	</Grid.RowDefinitions>
-        <xcdg:DataGridControl Name="DataGridControl"  x:FieldModifier="public"  Background="{DynamicResource NormalBrush}"      AllowDrop="True"  ItemsSource="{Binding}"    SelectedItem="{Binding SelectedItem}"   ItemContainerStyle="{DynamicResource DataRowStyle1}" ScrollViewer.HorizontalScrollBarVisibility="Visible" AutoCreateColumns="False" Margin="20" Grid.ColumnSpan="2" />
+        <xcdg:DataGridControl Name="DataGridControl"  x:FieldModifier="public"  Background="{DynamicResource NormalBrush}"      AllowDrop="True"  ItemsSource="{Binding}"    SelectedItem="{Binding SelectedItem}"   ItemContainerStyle="{DynamicResource DataRowStyle1}" ScrollViewer.HorizontalScrollBarVisibility="Visible" AutoCreateColumns="False" Margin="8,0" Grid.ColumnSpan="2" />
         <Grid Grid.Row="1" Height="25" VerticalAlignment="Top" Grid.ColumnSpan="2">
         	<Border BorderBrush="Black" BorderThickness="1" Background="#FF2D2D2D"/>
         	<StackPanel HorizontalAlignment="Left" Margin="2.25,0,0,0" Orientation="Horizontal" d:LayoutOverrides="Height">
@@ -47,13 +45,13 @@
         </Grid>
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
         	<Grid.ColumnDefinitions>
-        		<ColumnDefinition Width="0.574*"/>
+        		<ColumnDefinition Width="0.74*"/>
         		<ColumnDefinition Width="0.426*"/>
         	</Grid.ColumnDefinitions>
-        	<TabControl  DataContext="{Binding CurrentTarget}" Margin="20">
+        	<TabControl  DataContext="{Binding CurrentTarget}" Margin="8">
         		<TabItem Header="XPath">
         			<Grid Margin="0,0,6,-5">
-        				 <ListView Margin="8,30,8,8" SelectionMode="Single" DataContext="{Binding}"
+        				 <ListView Margin="8,30" SelectionMode="Single" DataContext="{Binding}"
 				ItemsSource="{Binding CrawItems}" d:LayoutOverrides="GridBox" >
 
                 <ListView.View>
@@ -61,24 +59,39 @@
                         <GridViewColumn Header="选择">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <CheckBox IsChecked="{Binding IsEnabled}"  HorizontalAlignment="Center" />
+                                    <CheckBox IsChecked="{Binding IsSelected}"  HorizontalAlignment="Center" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-						 <GridViewColumn Header="名称">
+						 <GridViewColumn Header="名称" Width="150">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBox Text="{Binding Name}" HorizontalAlignment="Center" />
+                                    <TextBox Text="{Binding Name}"  MinWidth="120" HorizontalAlignment="Center" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-					<GridViewColumn Header="XPath" Width="200">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <TextBox Text="{Binding XPath}" HorizontalAlignment="Center" />
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
+					    <GridViewColumn Header="选择器" Width="100">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <ComboBox  ItemsSource="{attributes:EnumValues {x:Type connectors:SelectorFormat}}" SelectedItem="{Binding Format}" HorizontalAlignment="Center" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="路径"  Width="200">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBox Text="{Binding XPath}" MinWidth="180" HorizontalAlignment="Center" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+					      <GridViewColumn Header="启用">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <CheckBox IsChecked="{Binding IsEnabled}"  HorizontalAlignment="Center" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                
 						    <GridViewColumn Header="获取策略">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
@@ -92,8 +105,17 @@
 
                 </ListView.View>
 				</ListView>
-        				<TextBlock HorizontalAlignment="Left" Margin="8,8,0,0" TextWrapping="Wrap" Text="根节点XPath" VerticalAlignment="Top"/>
-        				<TextBox Margin="94.999,8,8,0" TextWrapping="Wrap" Text="{Binding RootXPath}" VerticalAlignment="Top"/>
+				    <StackPanel VerticalAlignment="Bottom"   DataContext="{Binding DataContext.CrawlItemCommands, ElementName=userControl}" Orientation="Horizontal" Margin="0" d:LayoutOverrides="GridBox" Height="30" HorizontalAlignment="Right">
+
+            <Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
+            <Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
+            <Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
+            <Button Style="{DynamicResource miniButton}" DataContext="{Binding [3]}" />
+            <Button Style="{DynamicResource miniButton}" DataContext="{Binding [4]}" />
+        </StackPanel>
+        				<TextBlock HorizontalAlignment="Left" Margin="8,8,0,0" TextWrapping="Wrap" Text="根节点" VerticalAlignment="Top"/>
+        				<TextBox Margin="124.199,8,8,0" TextWrapping="Wrap" Text="{Binding RootXPath}" VerticalAlignment="Top"/>
+        				<ComboBox Margin="44,4.76,0,0"   ItemsSource="{attributes:EnumValues {x:Type connectors:SelectorFormat}}" SelectedItem="{Binding RootFormat}"  ToolTip="  可选择完整XPath,或只根据id或class名称进行检索，如选择class,值填【name】，就是查找所有class=name的节点" VerticalAlignment="Top" HorizontalAlignment="Left" Width="66.999" d:LayoutOverrides="HorizontalAlignment, VerticalAlignment"/>
         			</Grid>
         		</TabItem>
         		<TabItem Header="HTML">
@@ -116,16 +138,16 @@
         		</TabItem>
         	</TabControl>
         	<StackPanel Grid.Column="1" Orientation="Vertical" d:LayoutOverrides="Height" HorizontalAlignment="Center" VerticalAlignment="Center">
-        		<TextBlock TextWrapping="WrapWithOverflow" Height="41.24" HorizontalAlignment="Center" Margin="0,3"><Run Text="左右切换选择所需的数据，左方可修改列名，"/><Run Language="zh-cn" Text="点击“刷新“可刷新结果"/><LineBreak/><Run Text="点击“确认结果”即可提交"/></TextBlock>
-        		<StackPanel Orientation="Horizontal" Margin="0,3" VerticalAlignment="Center" HorizontalAlignment="Center">
+        		<TextBlock Visibility="{Binding CanChange, Converter={StaticResource BooleanToVisibilityConverter}}" TextWrapping="WrapWithOverflow" HorizontalAlignment="Center" Margin="0,3"><Run Text="左右切换选择所需的数据，左方可修改列名，"/><Run Language="zh-cn" Text="点击“刷新“可刷新结果   "/><Run Text="点击“确认结果”即可提交"/></TextBlock>
+        		<StackPanel Visibility="{Binding CanChange, Converter={StaticResource BooleanToVisibilityConverter}}"  Orientation="Horizontal" Margin="0,3" VerticalAlignment="Center" HorizontalAlignment="Center">
         			<TextBlock TextWrapping="Wrap" Text="排序策略"/>
                     <ComboBox   ItemsSource="{attributes:EnumValues {x:Type connectors:SortMethod}}" SelectedItem="{Binding SortMethod}"  Width="120" Margin="10,0,0,0"/>
         		</StackPanel>
         		<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,3" Height="46.172" VerticalAlignment="Center">
-        			<Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands[1]}" Width="35" Height="35" Margin="15,0,0,0" />
+        			<Button Visibility="{Binding CanChange, Converter={StaticResource BooleanToVisibilityConverter}}"  Style="{DynamicResource middleButton}" DataContext="{Binding Commands[1]}" Width="35" Height="35" Margin="15,0,0,0" />
          
         			<Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands[0]}" Width="35" Height="35" Margin="15,0,0,0" />
-        			<Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands[2]}" Width="35" Height="35" Margin="15,5.586,0,5.586" />
+        			<Button Visibility="{Binding CanChange, Converter={StaticResource BooleanToVisibilityConverter}}"  Style="{DynamicResource middleButton}" DataContext="{Binding Commands[2]}" Width="35" Height="35" Margin="15,5.586,0,5.586" />
         		</StackPanel>
         		<StackPanel Orientation="Horizontal" Height="46.172" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,3">
         			<Button  DataContext="{Binding Commands[3]}" Content="{Binding Text}" Command="{Binding}" Margin="15,0,0,0" />
