--- a/Hawk.ETL.Controls/DataProcessManagerUI.xaml
+++ b/Hawk.ETL.Controls/DataProcessManagerUI.xaml
@@ -91,78 +91,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.331*"/>
-            <ColumnDefinition Width="0.26*"/>
-            <ColumnDefinition Width="0.409*"/>
-        </Grid.ColumnDefinitions>
-        <ListBox x:Name="listboxProcessMethodList" ToolTip="双击图标以新建任务" ItemsSource="{Binding ProgramNameFilterView}"  x:FieldModifier="public"   Margin="20,46,20,0"     ItemsPanel="{DynamicResource ItemsPanelTemplate1}"  ItemTemplate="{DynamicResource DataTemplateList}" Height="90" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <GridSplitter Width="5" Grid.Column="2" HorizontalAlignment="Left"/>
-        <ListBox x:Name="listBox"  DataContext="{Binding}" ToolTip="双击可加载任务，右键可对任务进行删除等操作"  SelectedItem="{Binding SelectedTask}" ItemsSource="{Binding ProjectTaskList}"  HorizontalContentAlignment="Stretch" Margin="20,187.667,8,20"    ItemTemplate="{DynamicResource DataTemplate2}"  >
-            <ListBox.GroupStyle>
-                <GroupStyle ContainerStyle="{StaticResource GroupContainerStyle}">
-                    <GroupStyle.HeaderTemplate>
-                        <DataTemplate>
-                            <Border BorderBrush="Black" BorderThickness="1" Height="30">
-                                <TextBlock Text="{Binding Name}"  FontWeight="Bold" />
-                            </Border>
-                        </DataTemplate>
-                    </GroupStyle.HeaderTemplate>
-                </GroupStyle>
-            </ListBox.GroupStyle>
-		    <ListBox.Resources>
-                <ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding BindingCommands.ChildActions[1].ChildActions}"/>
-
-                <Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
-                    <Setter Property="ContextMenu" Value="{StaticResource resourceContextMenu}" />
-
-                </Style>
-            </ListBox.Resources>
-
-
-
-        </ListBox>
-        <Grid Height="29" Margin="23,154.667,60,0" VerticalAlignment="Top">
-        	<TextBlock TextWrapping="Wrap" FontSize="21.333" Margin="0,0,0,1"><Run Language="zh-cn" Text="保存的任务" /></TextBlock>
-        	<TextBox TextWrapping="Wrap" Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="163,10,0,0" Width="76"/>
-        	<TextBlock TextWrapping="Wrap" Margin="112,10,77,1"><Run Language="zh-cn" Text="快速检索" /></TextBlock>
-
-        </Grid>
-
-        <TextBlock VerticalAlignment="Top" TextWrapping="Wrap" Margin="22,11,0,0" HorizontalAlignment="Left" FontSize="21.333" Grid.Column="2" Height="28" Width="97"><Run Text="数据"/><Run Text="源"/></TextBlock>
-        <TreeView DataContext="{Binding MainFrmUI.PluginDictionary[数据管理]}" ToolTip="右键可新建数据源"  Margin="20,48,20,20"  x:Name="treeView"  ItemsSource="{Binding CurrentConnectors}" Grid.Column="2">
-            <TreeView.Resources>
-
-                <HierarchicalDataTemplate DataType="{x:Type Connectors:DBConnectorBase}"
-					ItemsSource="{Binding TableNames.Collection}"  >
-                    <TextBlock Text="{Binding Name}"   mvvm:TreeViewItemDoubleClick.Property="{Binding Data.Commands[0].ChildActions[0], Source={StaticResource BindingProxy}}"
-					  AllowDrop="True"   FontSize="16"   ToolTip="{Binding TypeName}" VerticalAlignment="Center">
-						<mvvm:DropHelper.DropSupport>
-							<mvvm:DropSupportData BindingPath="Commands[0]"  />
-						</mvvm:DropHelper.DropSupport>
-                        <TextBlock.ContextMenu>
-                            <ContextMenu ItemsSource="{Binding MainFrmUI.PluginDictionary[数据管理].Commands[0].ChildActions}" />
-                        </TextBlock.ContextMenu>
-                    </TextBlock>
-
-
-                </HierarchicalDataTemplate>
-                <HierarchicalDataTemplate DataType="{x:Type Connectors:TableInfo}"  >
-                    <TextBlock Text="{Binding Name}" AllowDrop="True" ToolTip="{Binding Description}" FontSize="13"  mvvm:TreeViewItemDoubleClick.Property="Commands[1].ChildActions[0]">
-                        <TextBlock.ContextMenu>
-                            <ContextMenu  ItemsSource="{Binding MainFrmUI.PluginDictionary[数据管理].Commands[1].ChildActions}"/>
-                        </TextBlock.ContextMenu>
-                    </TextBlock>
-                </HierarchicalDataTemplate>
-            </TreeView.Resources>
-            <TreeView.ContextMenu>
-                <ContextMenu   ItemsSource="{Binding MainFrmUI.PluginDictionary[数据管理].Commands[4].ChildActions}"/>
-
-            </TreeView.ContextMenu>
-        </TreeView>
-        <TextBlock VerticalAlignment="Top" TextWrapping="Wrap" Margin="23,10,0,0" HorizontalAlignment="Left" FontSize="21.333" Height="28" Width="97"><Run Text="新建任务"/></TextBlock>
-        <TextBlock HorizontalAlignment="Left" Margin="12.396,187.667,0,0" TextWrapping="Wrap" Text="任务描述" VerticalAlignment="Top" Grid.Column="1"/>
-        <TextBox Margin="8,219.907,8,102" TextWrapping="Wrap" Text="{Binding SelectedItem.Description, ElementName=listBox}" Grid.Column="1" d:LayoutOverrides="HorizontalAlignment"/>
-
+    	<TextBlock HorizontalAlignment="Left" Margin="250.5,148.5,0,0" TextWrapping="Wrap" Text="Hello World! Hawk" VerticalAlignment="Top" FontSize="48"/>
+     
     </Grid>
 </UserControl>
