--- a/Hawk.ETL.Controls/SystemStateViewer.xaml
+++ b/Hawk.ETL.Controls/SystemStateViewer.xaml
@@ -5,9 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mvvm="clr-namespace:Hawk.Core.Utils.MVVM;assembly=Hawk.Core"
          
+             xmlns:Hawk_Core_Connectors="clr-namespace:Hawk.Core.Connectors;assembly=Hawk.Core"
+         
              x:Class="Hawk.ETL.Controls.SystemStateViewer"
              mc:Ignorable="d" 
-             d:DesignHeight="436.667" d:DesignWidth="476">
+             d:DesignHeight="678.667" d:DesignWidth="262">
 	<UserControl.Resources>
       
         <mvvm:BindingProxy x:Key="BindingProxy" Data="{Binding}"/>
@@ -89,11 +91,21 @@
 		</DataTemplate>
 	</UserControl.Resources>
     <Grid>
-    	<Grid.ColumnDefinitions>
-    		<ColumnDefinition Width="0.511*"/>
-    		<ColumnDefinition Width="0.489*"/>
-    	</Grid.ColumnDefinitions>
+    	<Grid.RowDefinitions>
+    		<RowDefinition Height="0.511*"/>
+    		<RowDefinition Height="0.489*"/>
+				<RowDefinition Height="0.511*"/>
+    		<RowDefinition Height="0.489*"/>
+    	</Grid.RowDefinitions>
             <ListBox x:Name="processListBox" ToolTip="当前加载的所有算法模块" SelectedItem="{Binding SelectedProcess}" Margin="8,8,8,20" MouseMove="processListBox_MouseMove" DataContext="{Binding PluginDictionary[模块管理]}" ItemsSource="{Binding ProcessCollectionView}"  ItemTemplate="{DynamicResource DataTemplate2}"  >
+            <ListBox.Resources>
+            	 	<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding PluginDictionary[模块管理].BindingCommands.ChildActions[4].ChildActions}"/>
+
+            	 	<Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
+            	 		<Setter Property="ContextMenu" Value="{StaticResource resourceContextMenu}" />
+                    <Setter Property="AllowDrop" Value="True" />
+                </Style>
+            </ListBox.Resources>
             <ListBox.GroupStyle>
                 <GroupStyle ContainerStyle="{StaticResource GroupContainerStyle}">
                     <GroupStyle.HeaderTemplate>
@@ -105,14 +117,6 @@
                     </GroupStyle.HeaderTemplate>
                 </GroupStyle>
             </ListBox.GroupStyle>
-            <ListBox.Resources>
-            	 	<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding PluginDictionary[模块管理].BindingCommands.ChildActions[4].ChildActions}"/>
-
-            	 	<Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
-            	 		<Setter Property="ContextMenu" Value="{StaticResource resourceContextMenu}" />
-                    <Setter Property="AllowDrop" Value="True" />
-                </Style>
-            </ListBox.Resources>
             <ListBox.ContextMenu>
                 <ContextMenu   ItemsSource="{Binding PluginDictionary[模块管理].BindingCommands.ChildActions[0].ChildActions}"/>
 
@@ -129,13 +133,11 @@
 								<Button Style="{DynamicResource miniButton}" DataContext="{Binding [3]}" />  
 							
 		</StackPanel>
-        <ListBox x:Name="dataListBox" Margin="8,8,8,20" ToolTip="当前加载的所有数据，可在此进行管理" SelectedItem="{Binding SelectedDataCollection}" MouseMove="ListBox_MouseMove_1" DataContext="{Binding PluginDictionary[数据管理]}" ItemsSource="{Binding DataCollections}" ItemTemplate="{DynamicResource DataTemplate1}" Grid.Column="1">
+        <ListBox x:Name="dataListBox" Margin="8,8,8,20" ToolTip="当前加载的所有数据，可在此进行管理" SelectedItem="{Binding SelectedDataCollection}" MouseMove="ListBox_MouseMove_1" DataContext="{Binding PluginDictionary[数据管理]}" ItemsSource="{Binding DataCollections}" ItemTemplate="{DynamicResource DataTemplate1}" Grid.Column="1" Grid.Row="1">
     		<ListBox.Resources>
     			<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding PluginDictionary[数据管理].Commands[2].ChildActions}"/>
-
     			<Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
     				<Setter Property="ContextMenu" Value="{StaticResource resourceContextMenu}" />
-
     			</Style>
     		</ListBox.Resources>
     		<ListBox.ContextMenu>
@@ -143,7 +145,7 @@
 
     		</ListBox.ContextMenu>
     	</ListBox>
-        <StackPanel VerticalAlignment="Bottom"  DataContext="{Binding PluginDictionary[数据管理].Commands[2].ChildActions}" HorizontalAlignment="Right" Margin="0,0,20,0" Orientation="Horizontal" Grid.Column="1">
+        <StackPanel VerticalAlignment="Bottom"  DataContext="{Binding PluginDictionary[数据管理].Commands[2].ChildActions}" HorizontalAlignment="Right" Margin="0,0,20,0" Orientation="Horizontal" Grid.Row="1">
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
@@ -152,6 +154,96 @@
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [5]}" />
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [6]}" />
     	</StackPanel>
+        <Grid Grid.Row="2" DataContext="{Binding PluginDictionary[数据管理] }">
+        	<TextBlock VerticalAlignment="Top" TextWrapping="Wrap" Margin="2,0,0,0" HorizontalAlignment="Left"><Run Text="数据"/><Run Text="源"/></TextBlock>
+            
+        
+        
+        	<TreeView DataContext="{Binding MainFrmUI.PluginDictionary[数据管理]}" ToolTip="右键可新建数据源"  Margin="8,20,8,0"  x:Name="treeView"  ItemsSource="{Binding CurrentConnectors}">
+        		<TreeView.Resources>
+
+        			<HierarchicalDataTemplate DataType="{x:Type Hawk_Core_Connectors:DBConnectorBase}"
+        				ItemsSource="{Binding TableNames.Collection}"  >
+        				<TextBlock Text="{Binding Name}"   mvvm:TreeViewItemDoubleClick.Property="{Binding Data.Commands[0].ChildActions[0], Source={StaticResource BindingProxy}}"
+        					AllowDrop="True"   FontSize="16"   ToolTip="{Binding TypeName}" VerticalAlignment="Center">
+        					<mvvm:DropHelper.DropSupport>
+        						<mvvm:DropSupportData BindingPath="Commands[0]"  />
+        					</mvvm:DropHelper.DropSupport>
+        					<TextBlock.ContextMenu>
+        						<ContextMenu ItemsSource="{Binding MainFrmUI.PluginDictionary[数据管理].Commands[0].ChildActions}" />
+        					</TextBlock.ContextMenu>
+        				</TextBlock>
+
+
+        			</HierarchicalDataTemplate>
+        			<HierarchicalDataTemplate DataType="{x:Type Hawk_Core_Connectors:TableInfo}"  >
+        				<TextBlock Text="{Binding Name}" AllowDrop="True" ToolTip="{Binding Description}" FontSize="13"  mvvm:TreeViewItemDoubleClick.Property="Commands[1].ChildActions[0]">
+        					<TextBlock.ContextMenu>
+        						<ContextMenu  ItemsSource="{Binding MainFrmUI.PluginDictionary[数据管理].Commands[1].ChildActions}"/>
+        					</TextBlock.ContextMenu>
+        				</TextBlock>
+        			</HierarchicalDataTemplate>
+        		</TreeView.Resources>
+        		<TreeView.ContextMenu>
+        			<ContextMenu   ItemsSource="{Binding MainFrmUI.PluginDictionary[数据管理].Commands[4].ChildActions}"/>
+
+        		</TreeView.ContextMenu>
+        	</TreeView>
+            
+        
+        
+        </Grid>
+        <Grid Margin="0" Grid.Row="3" DataContext="{Binding PluginDictionary[模块管理] }" >
+        	<Grid.RowDefinitions>
+        		<RowDefinition Height="0.858*"/>
+        		<RowDefinition Height="18"/>
+        	</Grid.RowDefinitions>
+        	<ListView   ItemsSource="{Binding CurrentProcessTasks}" Margin="8">
+    	
+        		<ListView.View>
+        			<GridView>
+        				<GridViewColumn Header="选择">
+        					<GridViewColumn.CellTemplate>
+        						<DataTemplate>
+        							<CheckBox IsChecked="{Binding IsSelected}"/>	 
+        						</DataTemplate>
+        					</GridViewColumn.CellTemplate>
+        					<!--脑残的xaml-->        
+        				</GridViewColumn>
+        				<GridViewColumn Header="名称" DisplayMemberBinding="{Binding Name}" />
+        				<GridViewColumn Header="百分比">
+        					<GridViewColumn.CellTemplate>
+        						<DataTemplate>
+        							<StackPanel Orientation="Horizontal">
+        								<ProgressBar Value="{Binding Percent}" Width="100" Margin="0,0,5,0"/>   
+    							 
+        							</StackPanel>
+        						</DataTemplate>
+        					</GridViewColumn.CellTemplate>
+        					<!--脑残的xaml-->        
+        				</GridViewColumn>
+        				<GridViewColumn Header="暂停">
+        					<GridViewColumn.CellTemplate>
+        						<DataTemplate>
+        							<CheckBox IsChecked="{Binding IsPause}"/>	 
+        						</DataTemplate>
+        					</GridViewColumn.CellTemplate>
+        					<!--脑残的xaml-->        
+        				</GridViewColumn>
+        				<GridViewColumn Header="位置" DisplayMemberBinding="{Binding CurrentIndex}" />
+        			</GridView>
+        		</ListView.View> 	           	 
+        	</ListView>
+        	<StackPanel VerticalAlignment="Top"   DataContext="{Binding BindingCommands.ChildActions[2].ChildActions}"  HorizontalAlignment="Right" Orientation="Horizontal" Grid.Row="1" Margin="20,0,0,0">
+        		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
+        		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
+        		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
+        		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [3]}" />  	
+        		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [4]}" />  	
+        	</StackPanel>
+    	 
+            
+        </Grid>
             
         
         
